{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 13,
  "lineage": "39ab162b-6d01-7816-3d58-d68f493ad758",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511820933928:internet-gateway/igw-0a6de08aaba769958",
            "id": "igw-0a6de08aaba769958",
            "owner_id": "511820933928",
            "tags": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-igw"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-igw"
            },
            "vpc_id": "vpc-0c6af0cdf97c956ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511820933928:network-acl/acl-0c49be10d7bc441c7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c49be10d7bc441c7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "511820933928",
            "subnet_ids": [
              "subnet-0c0b2c80d48b59ff1",
              "subnet-0f075218807cffa42"
            ],
            "tags": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-private-nacl",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-private-nacl",
              "Type": "Private"
            },
            "vpc_id": "vpc-0c6af0cdf97c956ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511820933928:network-acl/acl-08f3a25aae708f6c1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08f3a25aae708f6c1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "511820933928",
            "subnet_ids": [
              "subnet-0861d8a2a6a2b828d",
              "subnet-0e93eda063cc1412a"
            ],
            "tags": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-public-nacl",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-public-nacl",
              "Type": "Public"
            },
            "vpc_id": "vpc-0c6af0cdf97c956ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511820933928:route-table/rtb-01ff55eb9520be13b",
            "id": "rtb-01ff55eb9520be13b",
            "owner_id": "511820933928",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6de08aaba769958",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-public-rt",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-public-rt",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6af0cdf97c956ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098b56cb4a4282785",
            "route_table_id": "rtb-01ff55eb9520be13b",
            "subnet_id": "subnet-0861d8a2a6a2b828d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a0b130351761352",
            "route_table_id": "rtb-01ff55eb9520be13b",
            "subnet_id": "subnet-0e93eda063cc1412a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511820933928:security-group/sg-0525af4b5992295d6",
            "description": "Default security group for VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0525af4b5992295d6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "main-vpc-default-sg",
            "name_prefix": "",
            "owner_id": "511820933928",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-default-sg"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6af0cdf97c956ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511820933928:subnet/subnet-0c0b2c80d48b59ff1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0b2c80d48b59ff1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511820933928",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-0c6af0cdf97c956ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511820933928:subnet/subnet-0f075218807cffa42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f075218807cffa42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511820933928",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-private-subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-0c6af0cdf97c956ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511820933928:subnet/subnet-0861d8a2a6a2b828d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0861d8a2a6a2b828d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "511820933928",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0c6af0cdf97c956ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511820933928:subnet/subnet-0e93eda063cc1412a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e93eda063cc1412a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "511820933928",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc-public-subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0c6af0cdf97c956ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511820933928:vpc/vpc-0c6af0cdf97c956ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-044b6bc014fd2ef2b",
            "default_route_table_id": "rtb-008a3e763c9eb480f",
            "default_security_group_id": "sg-054c79e93b151f06c",
            "dhcp_options_id": "dopt-0702637c7a92d03ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6af0cdf97c956ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-008a3e763c9eb480f",
            "owner_id": "511820933928",
            "tags": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}